WexGit/Wex_DX/force-app/main/default/objects/CampaignMember/fields/Alyce_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Alyce_Campaign_ID__c</fullName>
    <formula>Campaign.Alyce_Campaign_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alyce Campaign ID</label>
    <type>Text</type>
</CustomField>