WexGit/Wex_DX/force-app/main/default/objects/CampaignMember/fields/Converted_to_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Oppty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted to Oppty</label>
    <type>Checkbox</type>
</CustomField>