WexGit/Wex_DX/force-app/main/default/objects/CampaignMember/fields/LeadCampaign__c.field-meta.xml
<CustomField>
    <fullName>LeadCampaign__c</fullName>
    <formula>LeadId &amp; &apos;-&apos; &amp; CampaignId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Campaign</label>
    <type>Text</type>
</CustomField>