WexGit/Wex_DX/force-app/main/default/objects/CampaignMember/fields/MemberAddedCounter__c.field-meta.xml
<CustomField>
    <fullName>MemberAddedCounter__c</fullName>
    <defaultValue>1</defaultValue>
    <label>MemberAddedCounter</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>