WexGit/Wex_DX/force-app/main/default/objects/CampaignMember/fields/MemberHasAcct__c.field-meta.xml
<CustomField>
    <fullName>MemberHasAcct__c</fullName>
    <description>Field used to count campaign members where the Acct # field is not null</description>
    <formula>IF(
   Contact.Account.F1_Account_Number__c &lt;&gt; null, 1,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MemberHasAcct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>