WexGit/Wex_DX/force-app/main/default/objects/CampaignMember/fields/MemberRespondedLastMonth__c.field-meta.xml
<CustomField>
    <fullName>MemberRespondedLastMonth__c</fullName>
    <formula>IF(
 1- (MONTH(TODAY())) = MONTH(FirstRespondedDate), 1, 0
)</formula>
    <label>MemberRespondedLastMonth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>