WexGit/Wex_DX/force-app/main/default/objects/CampaignMember/fields/MemberRespondedThisMonth__c.field-meta.xml
<CustomField>
    <fullName>MemberRespondedThisMonth__c</fullName>
    <formula>IF(
   MONTH(TODAY()) = MONTH( FirstRespondedDate ), 1,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MemberRespondedThisMonth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>