WexGit/Wex_DX/force-app/main/default/objects/CampaignMember/fields/Pardot_URL__c.field-meta.xml
<CustomField>
    <fullName>Pardot_URL__c</fullName>
    <description>Used to identify if campaign member has been synced with Pardot.</description>
    <formula>IF(
NOT(ISBLANK(Contact.pi__url__c)), HYPERLINK(Contact.pi__url__c, Contact.pi__url__c), 
IF(				
NOT(ISBLANK(Lead.pi__url__c)),HYPERLINK(Lead.pi__url__c,Lead.pi__url__c), 
NULL))</formula>
    <label>Pardot URL</label>
    <type>Text</type>
</CustomField>