WexGit/Wex_DX/force-app/main/default/objects/CampaignMember/fields/Parent_Lead__c.field-meta.xml
<CustomField>
    <fullName>Parent_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent Lead</label>
    <type>Checkbox</type>
</CustomField>