WexGit/Wex_DX/force-app/main/default/objects/CampaignMember/fields/Referrer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_First_Name__c</fullName>
    <formula>Contact.Referrer_First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer First Name</label>
    <type>Text</type>
</CustomField>