WexGit/Wex_DX/force-app/main/default/objects/CampaignMember/fields/zzID__c.field-meta.xml
<CustomField>
    <fullName>zzID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>zzID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>