WexGit/Wex_DX/force-app/main/default/objects/CampaignMember/recordTypes/BW_Demo.recordType-meta.xml
<RecordType>
    <fullName>BW_Demo</fullName>
    <active>true</active>
    <label>BW Demo</label>
</RecordType>