WexGit/Wex_DX/force-app/main/default/objects/CampaignMember/recordTypes/Truckers_B2B.recordType-meta.xml
<RecordType>
    <fullName>Truckers_B2B</fullName>
    <active>true</active>
    <label>Truckers B2B</label>
</RecordType>