WexGit/Wex_DX/force-app/main/default/objects/CampaignMember/recordTypes/WES_Campaign_Member.recordType-meta.xml
<RecordType>
    <fullName>WES_Campaign_Member</fullName>
    <active>true</active>
    <label>WES Campaign Member</label>
</RecordType>