WexGit/Wex_DX/force-app/main/default/objects/CampaignMember/recordTypes/Wex_Europe_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Wex_Europe_Campaign</fullName>
    <active>true</active>
    <label>Wex Europe Campaign</label>
</RecordType>